[package]
name = "multa"
version = "0.1.0"
authors = ["Vincent Cordobes <vincent.cordobes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
crossterm = "0.19"
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0.1"
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3.2.3"
